@startuml

interface Abstraction {
    Implementor
    operation()
}

class RefinedAbstraction {
    operation()
}
Abstraction <|-- RefinedAbstraction

interface Implementor {
    operation_impl()
}
Abstraction o-- Implementor

class ConcreteImplementationA {
    operation_impl()
}
class ConcreteImplementationB {
    operation_impl()
}
Implementor <|-- ConcreteImplementationA
Implementor <|-- ConcreteImplementationB

@enduml
